--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-recursos-comprometidos/detalle-recursos-comprometidos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-recursos-comprometidos/detalle-recursos-comprometidos.component.html
@@ -1,13 +1,28 @@
-<div class="margin-tabla">
-  <app-tabla-recursos-comprometidos></app-tabla-recursos-comprometidos>
+<div class="table-responsive text-center">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="aportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
+          <td mat-cell *matCellDef="let element"style="padding: 0 0em !important;">
+              <div class="supportElement" *ngFor="let el of element.aportante ; let i = index">
+                  {{el.nombre}}
+              </div>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="valorAportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
+          <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+              <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
+                  ${{ el.valor | currency:' ':'symbol-narrow':'.0-0' }}
+              </div>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="valorTotalAportantes">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total aportantes </th>
+          <td mat-cell *matCellDef="let element"> <b>${{ element.valorTotalAportantes | currency:' ':'symbol-narrow':'.0-0' }} </b></td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
 </div>
-<mat-card class="shipping-card var-main-gris">
-  <mat-card-header class="header-card header-card--margin">
-    <mat-card-title class="header-card--text"> 
-      Fuentes y usos
-    </mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <app-tabla-fuentes-y-recursos></app-tabla-fuentes-y-recursos>
-  </mat-card-content>
-</mat-card>
+<app-tabla-fuentes-y-recursos></app-tabla-fuentes-y-recursos>
