--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
@@ -1,22 +1,22 @@
-<section class="container">
+<section class="container" *ngIf="data != null">
   <div class="text-right">
-    <a routerLink="../../" mat-button color="primary" class="btn-regresar">
+    <a routerLink="../" mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
     </a>
   </div>
   <div class="text-center">
     <h1 class="title-menu--h1">
       Recursos comprometidos y pagados
-      LL457326
+      {{ data.llaveMen }}
     </h1>
     <p class="colorMainColor mt-05em">
       <span class="mx-1em">
         Número de contrato de obra:
-        <b> N801801 </b>
+        <b> {{ data.numeroContratoObra }} </b>
       </span>
       <span class="mx-1em">
         Número de contrato de interventoria:
-        <b> A513513 </b>
+        <b> {{ data.numeroContratoInterventoria }} </b>
       </span>
     </p>
   </div>
@@ -27,31 +27,31 @@
         <strong>
           Tipo de intervención:
         </strong>
-        Remodelación
+        {{ data.tipoIntervencion }}
       </p>
       <p>
         <strong>
           Institución Educativa:
         </strong>
-        I.E Nuestra Señora Del Carmen
+        {{ data.institucionEducativa }}
       </p>
       <p>
         <strong>
           Sede:
         </strong>
-        Única Sede
+        {{ data.sedeEducativa }}
       </p>
       <p>
         <strong>
           Departamento:
         </strong>
-        Boyacá
+        {{ data.departamento }}
       </p>
       <p>
         <strong>
           Municipio:
         </strong>
-        Susacón
+        {{ data.municipio }}
       </p>
     </mat-card-content>
   </mat-card>
@@ -60,8 +60,7 @@
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title">
-          Contrato de obra
-          N801801
+          Contrato de obra &nbsp;<span *ngIf="contratoObra">{{ contratoObra.numeroContrato }}</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
       <mat-accordion>
@@ -71,7 +70,7 @@
               Recursos comprometidos
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <app-detalle-recursos-comprometidos></app-detalle-recursos-comprometidos>
+          <app-detalle-recursos-comprometidos *ngIf="contratoObra" [contratacionProyecto]="contratoObra.contratacion.contratacionProyecto"></app-detalle-recursos-comprometidos>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style sub-expansion">
           <mat-expansion-panel-header class="expansion-style--header">
@@ -79,7 +78,7 @@
               Contratistas
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <app-detalle-contratistas></app-detalle-contratistas>
+          <app-detalle-contratistas *ngIf="contratoObra" [contratista]="contratoObra.contratacion.contratista"></app-detalle-contratistas>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style sub-expansion">
           <mat-expansion-panel-header class="expansion-style--header">
@@ -87,18 +86,42 @@
               Valor total ordenes de giro
             </mat-panel-title>
           </mat-expansion-panel-header>
-          Valor total ordenes de giro
+          <app-tabla-total-ordenes-de-giro *ngIf="contratoObra" [solicitudPago]="contratoObra.solicitudPago"></app-tabla-total-ordenes-de-giro>
         </mat-expansion-panel>
       </mat-accordion>
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title">
-          Contrato de interventoria
-          A513513
-        </mat-panel-title>
+          Contrato de interventoria &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
+      </mat-panel-title>
       </mat-expansion-panel-header>
-      
+      <mat-accordion>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Recursos comprometidos
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-detalle-recursos-comprometidos *ngIf="contratoInterventoria" [contratacionProyecto]="contratoInterventoria.contratacion.contratacionProyecto"></app-detalle-recursos-comprometidos>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Contratistas
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-detalle-contratistas *ngIf="contratoInterventoria" [contratista]="contratoInterventoria.contratacion.contratista"></app-detalle-contratistas>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Valor total ordenes de giro
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-tabla-total-ordenes-de-giro *ngIf="contratoInterventoria" [solicitudPago]="contratoInterventoria.solicitudPago"></app-tabla-total-ordenes-de-giro>
+        </mat-expansion-panel>
+      </mat-accordion>
     </mat-expansion-panel>
   </mat-accordion>
 
