Fix lista de garantias

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-actualiz-polizas-garantias/components/razon-tipo-actualizacion-rapg/razon-tipo-actualizacion-rapg.component.html
@@ -112,7 +112,7 @@
                                         multiple
                                         required
                                         (selectionChange)="getvalues( $event.value )">
-                                        <mat-option *ngFor="let seguro of polizasYSegurosArray" [value]="seguro.codigo">
+                                        <mat-option *ngFor="let seguro of listaGarantias" [value]="seguro.codigo">
                                             {{ seguro.nombre }}
                                         </mat-option>
                             </mat-select>
