--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
@@ -13,7 +13,7 @@
             <p><strong>Valor pagado: </strong><em>$10.000.000</em></p>
         </mat-card-content>
     </mat-card>
-    <p class="info-container" style="margin-top: 2em;">
+    <p class="info-container" style="margin-top: 2em;" *ngIf="esVerDetalle === false">
         <span class="info-text sin-diligenciar">Sin diligenciar</span>
         <span class="info-text en-proceso">En proceso</span>
         <span class="info-text completo">Completo</span>
