--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-valor-total-og-gbftrec/tabla-valor-total-og-gbftrec.component.html
@@ -2,7 +2,7 @@
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
         <ng-container matColumnDef="numOrdenGiro">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Número de orden de giro </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.ordenGiro.numeroSolicitud }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.numeroOrdenGiro }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="contratista">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Contratista </th>
@@ -10,29 +10,32 @@
         </ng-container>
         <ng-container matColumnDef="facturado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Facturado </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.facturado }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.facturado | currency: '':'symbol-narrow':'.0-0' }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="ansAplicado">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> ANS aplicado </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.ansAplicado }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.ansAplicado | currency: '':'symbol-narrow':'.0-0' }} </td>
         </ng-container>
         <ng-container matColumnDef="reteGarantiaAPagar">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Rete garantía a pagar </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.reteGarantiaAPagar }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.reteGarantia | currency: '':'symbol-narrow':'.0-0' }} </td>
         </ng-container>
         <ng-container matColumnDef="otrosDescuentos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Otros descuentos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.otrosDescuentos }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.otrosDescuentos | currency: '':'symbol-narrow':'.0-0' }} </td>
         </ng-container>
         <ng-container matColumnDef="aPagarAntesImpuestos">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> A pagar antes de impuestos </th>
-            <td mat-cell *matCellDef="let element" align="center"> {{ element.aPagarAntesImpuestos }} </td>
+            <td mat-cell *matCellDef="let element" align="center"> {{ element.apagarAntesImpuestos | currency: '':'symbol-narrow':'.0-0' }} </td>
         </ng-container>
         <ng-container matColumnDef="gestion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Gestión </th>
             <td mat-cell *matCellDef="let element" align="center">
-                <button mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.solicitudPagoId)">
-                    Ver detalle
+                <button mat-raised-button
+                        color="accent"
+                        class="btn-table"
+                        [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/detalleOrdengiro', element.solicitudId ]">
+                        Ver detalle
                 </button>
             </td>
         </ng-container>
