--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/registrar-traslado-gbftrec/registrar-traslado-gbftrec.component.html
@@ -23,9 +23,9 @@
             <p><strong>Sede educativa: </strong><em> {{ proyecto.sedeEducativa }} </em></p>
             <p><strong>Departamento: </strong><em> {{ proyecto.departamento }} </em></p>
             <p><strong>Municipio: </strong><em> {{ proyecto.municipio }} </em></p>
-            <p><strong>Número DDP: </strong><em>DDP_0001</em></p>
-            <p><strong>Valor DDP: </strong><em>$100.000.000</em></p>
-            <h2 class="card-subTitle">DRP</h2>
+            <p><strong>Número DDP: </strong><em>DDP_0001 *</em></p>
+            <p><strong>Valor DDP: </strong><em>$100.000.000 *</em></p>
+            <h2 class="card-subTitle">DRP *</h2>
             <div class="table-responsive">
                 <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
                     <ng-container matColumnDef="drp">
