--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/detalle-recursos-comprometidos/detalle-recursos-comprometidos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/detalle-recursos-comprometidos/detalle-recursos-comprometidos.component.html
@@ -1,5 +1,5 @@
 <div class="margin-tabla">
-  <app-tabla-recursos-comprometidos></app-tabla-recursos-comprometidos>
+  <app-tabla-recursos-comprometidos [contratacionProyecto] = "contratacionProyecto"></app-tabla-recursos-comprometidos>
 </div>
 <mat-card class="shipping-card var-main-gris">
   <mat-card-header class="header-card header-card--margin">
