--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/recursos-comprometidos-pagados/recursos-comprometidos-pagados.component.html
@@ -1,4 +1,4 @@
-<section class="container">
+<section class="container" *ngIf="data != null">
   <div class="text-right">
     <a routerLink="./../" mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar" />
@@ -7,16 +7,16 @@
   <div class="text-center">
     <h1 class="title-menu--h1">
       Recursos comprometidos y pagados
-      LL457326
+      {{ data.llaveMen }}
     </h1>
     <p class="colorMainColor mt-05em">
       <span class="mx-1em">
         Número de contrato de obra:
-        <b> N801801 </b>
+        <b> {{ data.numeroContratoObra }} </b>
       </span>
       <span class="mx-1em">
         Número de contrato de interventoria:
-        <b> A513513 </b>
+        <b> {{ data.numeroContratoInterventoria }} </b>
       </span>
     </p>
   </div>
@@ -27,31 +27,31 @@
         <strong>
           Tipo de intervención:
         </strong>
-        Remodelación
+        {{ data.tipoIntervencion }}
       </p>
       <p>
         <strong>
           Institución Educativa:
         </strong>
-        I.E Nuestra Señora Del Carmen
+        {{ data.institucionEducativa }}
       </p>
       <p>
         <strong>
           Sede:
         </strong>
-        Única Sede
+        {{ data.sedeEducativa }}
       </p>
       <p>
         <strong>
           Departamento:
         </strong>
-        Boyacá
+        {{ data.departamento }}
       </p>
       <p>
         <strong>
           Municipio:
         </strong>
-        Susacón
+        {{ data.municipio }}
       </p>
     </mat-card-content>
   </mat-card>
@@ -60,8 +60,7 @@
     <mat-expansion-panel class="expansion-style">
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title">
-          Contrato de obra
-          N801801
+          Contrato de obra &nbsp;<span *ngIf="contratoObra">{{ contratoObra.numeroContrato }}</span>
         </mat-panel-title>
       </mat-expansion-panel-header>
       <mat-accordion>
@@ -71,7 +70,7 @@
               Recursos comprometidos
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <app-detalle-recursos-comprometidos></app-detalle-recursos-comprometidos>
+          <app-detalle-recursos-comprometidos *ngIf="contratoObra" [contratacionProyecto]="contratoObra.contratacion.contratacionProyecto"></app-detalle-recursos-comprometidos>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style sub-expansion">
           <mat-expansion-panel-header class="expansion-style--header">
@@ -79,7 +78,7 @@
               Contratistas
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <app-detalle-contratistas></app-detalle-contratistas>
+          <app-detalle-contratistas *ngIf="contratoObra" [contratista]="contratoObra.contratacion.contratista"></app-detalle-contratistas>
         </mat-expansion-panel>
         <mat-expansion-panel class="expansion-style sub-expansion">
           <mat-expansion-panel-header class="expansion-style--header">
@@ -87,81 +86,40 @@
               Valor total ordenes de giro
             </mat-panel-title>
           </mat-expansion-panel-header>
-          
-          
-          <div class="table-responsive text-center">
-            <table class="mat-table cdk-table mat-sort mat-table-style table-form">
-              <thead>
-                <tr class="mat-header-row cdk-header-row ng-star-inserted">
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    Número de orden de giro
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    Contratistas
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    Facturado
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    ANS aplicado
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    Rete garantía a pagar
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    Otros descuentos
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    A pagar antes de impuestos
-                  </th>
-                  <th class="mat-header-cell cdk-header-cell ng-star-inserted">
-                    Gestión
-                  </th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr *ngFor="let element of listaValorTotalOrdenesGiro">
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    <b>
-                      {{ element.numeroOrdenGiro }}
-                    </b>
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.contratista }}
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    <b>
-                      {{ element.facturado }}
-                    </b>
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.adn }}
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.reteGarantia }}
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.otrosDescuentos }}
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.pagarAntesImpuestos }}
-                  </td>
-                  <td class="mat-cell cdk-cell ng-star-inserted">
-                    <a
-                      mat-button
-                      mat-raised-button
-                      color="accent"
-                      class="btn-table"
-                      [routerLink]="['verDetalle', element.id]"
-                    >
-                      Ver detalle
-                    </a>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-
+          <app-tabla-total-ordenes-de-giro *ngIf="contratoObra" [solicitudPago]="contratoObra.solicitudPago"></app-tabla-total-ordenes-de-giro>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </mat-expansion-panel>
+    <mat-expansion-panel class="expansion-style">
+      <mat-expansion-panel-header class="expansion-style--header">
+        <mat-panel-title class="expansion-style--title">
+          Contrato de interventoria &nbsp;<span *ngIf="contratoInterventoria">{{ contratoInterventoria.numeroContrato }}</span>
+      </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-accordion>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Recursos comprometidos
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-detalle-recursos-comprometidos *ngIf="contratoInterventoria" [contratacionProyecto]="contratoInterventoria.contratacion.contratacionProyecto"></app-detalle-recursos-comprometidos>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Contratistas
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-detalle-contratistas *ngIf="contratoInterventoria" [contratista]="contratoInterventoria.contratacion.contratista"></app-detalle-contratistas>
+        </mat-expansion-panel>
+        <mat-expansion-panel class="expansion-style sub-expansion">
+          <mat-expansion-panel-header class="expansion-style--header">
+            <mat-panel-title class="expansion-style--title">
+              Valor total ordenes de giro
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <app-tabla-total-ordenes-de-giro *ngIf="contratoInterventoria" [solicitudPago]="contratoInterventoria.solicitudPago"></app-tabla-total-ordenes-de-giro>
         </mat-expansion-panel>
       </mat-accordion>
     </mat-expansion-panel>
