--- a/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-recursos-comprometidos/tabla-recursos-comprometidos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/aprobar-solicitud-liquidacion-contractual/components/tabla-recursos-comprometidos/tabla-recursos-comprometidos.component.html
@@ -1,32 +1,27 @@
-<div class="table-responsive mb-2em text-center tabla-gris">
-  <table mat-table [dataSource]="dataSource" matSort>
-    <!-- aportante Column -->
-    <ng-container matColumnDef="aportante">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        aportante
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <b>{{ element.aportante }}</b>
-      </td>
-    </ng-container>
-
-    <!-- valorAportante Column -->
-    <ng-container matColumnDef="valorAportante">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Valor aportante
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.valorAportante }}</td>
-    </ng-container>
-
-    <!-- valorTotal Column -->
-    <ng-container matColumnDef="valorTotal">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
-        Valor total aportantes
-      </th>
-      <td mat-cell *matCellDef="let element">{{ element.valorTotal }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+<div class="table-responsive text-center">
+  <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="aportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Aportante </th>
+          <td mat-cell *matCellDef="let element"style="padding: 0 0em !important;">
+              <div class="supportElement" *ngFor="let el of element.aportante ; let i = index">
+                  {{el.nombre}}
+              </div>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="valorAportante">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor aportante </th>
+          <td mat-cell *matCellDef="let element" style="padding: 0 0em !important;">
+              <div class="supportElement" *ngFor="let el of element.valorAportante ; let i = index">
+                  ${{ el.valor | currency:' ':'symbol-narrow':'.0-0' }}
+              </div>
+          </td>
+      </ng-container>
+      <ng-container matColumnDef="valorTotalAportantes">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Valor total aportantes </th>
+          <td mat-cell *matCellDef="let element"> <b>${{ element.valorTotalAportantes | currency:' ':'symbol-narrow':'.0-0' }} </b></td>
+      </ng-container>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <!--<mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>-->
 </div>
