--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/ejecucion-financiera-gtlc/ejecucion-financiera-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/ejecucion-financiera-gtlc/ejecucion-financiera-gtlc.component.html
@@ -1,21 +1,21 @@
 <section class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteLiquidacionContractual/verificarBalance/1" mat-button color="primary" class="btn-regresar">
+        <a routerLink="./../" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
-    <h1 class="title-menu--h1">Ejecución financiera por componente LL457326</h1>
+    <h1 class="title-menu--h1">Ejecución financiera por componente {{ data.llaveMen }}</h1>
     <p class="info-sub-title">
-        <span>Número de contrato de obra: <b>N801801</b></span>
-        <span>Número de contrato de interventoria: <b>A513513</b></span>
+        <span>Número de contrato de obra: <b>{{ data.numeroContratoObra }} </b></span>
+        <span>Número de contrato de interventoria: <b>{{ data.numeroContratoInterventoria }}</b></span>
     </p>
     <mat-card class="shipping-card var-main-gris">
         <mat-card-content align="left">
-            <p><strong>Tipo de intervención: </strong><em>Remodelación</em></p>
-            <p><strong>Institución Educativa: </strong><em>I.E Nuestra Señora Del Carmen</em></p>
-            <p><strong>Sede: </strong><em>Única Sede</em></p>
-            <p><strong>Departamento: </strong><em>Boyacá</em></p>
-            <p><strong>Municipio: </strong><em>Susacón</em></p>
+            <p><strong>Tipo de intervención: </strong><em>{{ data.tipoIntervencion }}</em></p>
+            <p><strong>Institución Educativa: </strong><em>{{ data.institucionEducativa }}</em></p>
+            <p><strong>Sede: </strong><em>{{ data.sedeEducativa }}</em></p>
+            <p><strong>Departamento: </strong><em>{{ data.departamento }}</em></p>
+            <p><strong>Municipio: </strong><em>{{ data.municipio }}</em></p>
         </mat-card-content>
     </mat-card>
     <mat-card class="shipping-card mainGris">
@@ -25,7 +25,7 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <app-tabla-ejpresupuestal-gtlc></app-tabla-ejpresupuestal-gtlc>
+            <app-tabla-ejpresupuestal-gtlc *ngIf="dataTable.length > 0" [data]="dataTable"></app-tabla-ejpresupuestal-gtlc>
         </mat-card-content>
     </mat-card>
     <mat-card class="shipping-card mainGris" style="margin-top: 3em;">
