--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-balance-financiero-gtlc/tabla-balance-financiero-gtlc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-liq-contractual/components/tabla-balance-financiero-gtlc/tabla-balance-financiero-gtlc.component.html
@@ -1,13 +1,12 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-        <ng-container matColumnDef="fechaTerminacionProyecto">
+        <ng-container matColumnDef="fechaterminacionProyecto">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de terminación del proyecto </th>
-            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaTerminacionProyecto | date:
-                    'dd/MM/yyyy' }}</b> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <b>{{ element.fechaterminacionProyecto }}</b> </td>
         </ng-container>
         <ng-container matColumnDef="llaveMEN">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Llave MEN </th>
-            <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.llaveMEN }}</em> </td>
+            <td mat-cell *matCellDef="let element" align="center"> <em>{{ element.llaveMen }}</em> </td>
         </ng-container>
         <ng-container matColumnDef="tipoIntervencion">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Tipo de intervención </th>
@@ -29,7 +28,7 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Estado del balance </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.estadoValidacion }} </td>
         </ng-container>
-        <ng-container matColumnDef="id">
+        <ng-container matColumnDef="contratacionProyectoId">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>
             Gestión
             </th>
@@ -39,7 +38,7 @@
                 mat-raised-button
                 color="accent"
                 class="btn-table"
-                [routerLink]="['verificarBalance']"
+                [routerLink]="['verificarBalance',element.proyectoId]"
             >
             Verificar
             </a> 
@@ -48,7 +47,7 @@
                 mat-raised-button
                 color="accent"
                 class="btn-table"
-                [routerLink]="['verDetalleEditarBalance']"
+                [routerLink]="['verDetalleEditarBalance',element.proyectoId]"
             >
             Ver detalle/Editar
             </a>
@@ -57,7 +56,7 @@
                 mat-raised-button
                 color="accent"
                 class="btn-table"
-                [routerLink]="['verDetalleBalance']"
+                [routerLink]="['verDetalleBalance',element.proyectoId]"
             >
             Ver detalle
             </a>
