--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tabla-info-fuenterec-gog/tabla-info-fuenterec-gog.component.html
@@ -1,5 +1,5 @@
 <div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort class=" table-gris mat-elevation-z8">
         <ng-container matColumnDef="nombreAportante">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre del aportante </th>
             <td mat-cell *matCellDef="let element" align="center"> {{ element.nombreAportante }} </td>
