--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-solicitud-liquidacion-contractual/components/detalle-traslados/detalle-traslados.component.html
@@ -213,7 +213,7 @@
                   Tercero de giro
               </mat-panel-title>
           </mat-expansion-panel-header>
-          <app-form-tercero-giro-gog [solicitudPago]="solicitudPago" [esVerDetalle]="esVerDetalle" (tieneObservacion)="semaforoInfoGeneral = 'en-proceso'; tieneObservacion.emit( true )"></app-form-tercero-giro-gog>
+          <app-form-tercero-giro-gog></app-form-tercero-giro-gog>
       </mat-expansion-panel>
       </mat-accordion>
     </mat-expansion-panel>
